fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h3 { /*project subtext and footer headers*/
 }
 
 p {
-	line-height: 1.75em;
+	line-height: 1.3em;
 	width: 95%;
 }
 
